--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ a:active {
     background-color: #F3F6F6;
     padding: 50px 24px;
     border-radius: 20px;
+    margin-bottom: 20px;
 }
 
 .product1 img{
